(lang dune 3.9)

(name chameleon)

(generate_opam_files true)

(source
 (github CharlesAverill/chameleon))

(authors "Charles Averill")

(maintainers "Charles Averill")

(license LICENSE)

(documentation https://github.com/CharlesAverill/chameleon)

(package
 (name chameleon)
 (synopsis "A procedural generation game")
 (description "A procedural generation game")
 (depends ocaml dune tsdl))

